Add Cv sharing link

--- a/index.html
+++ b/index.html
@@ -132,7 +132,11 @@
             <div
               class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5"
             >
-              <a href="" class="btn btn-outline-light mr-5">Download CV</a>
+              <a
+                href="https://drive.google.com/file/d/1TTgXq8Z8kkXVM1Yb2_fm7bFitFfENfc4/view?usp=sharing"
+                class="btn btn-outline-light mr-5"
+                >Download CV</a
+              >
               <button
                 type="button"
                 class="btn-play"
