--- a/index.html
+++ b/index.html
@@ -492,8 +492,9 @@
               <h4 class="font-weight-bold m-0">Software Development</h4>
             </div>
             <p>
-              Justo sit justo eos amet tempor amet clita amet ipsum eos elitr.
-              Amet lorem lorem lorem est amet labore eirmod erat clita
+              Analyzing user needs and designing, constructing, and testing
+              end-user applications that will satisfy these needs through the
+              use of software programming languages.
             </p>
           </div>
           <div class="col-lg-4 col-md-6 text-center mb-5">
@@ -504,8 +505,8 @@
               <h4 class="font-weight-bold m-0">Web Development</h4>
             </div>
             <p>
-              Justo sit justo eos amet tempor amet clita amet ipsum eos elitr.
-              Amet lorem lorem lorem est amet labore eirmod erat clita
+              We create experiences that help customers become immersed in the
+              brand by combining utility and creativity.
             </p>
             <!-- <a class="border-bottom border-primary text-decoration-none" href=""
               >Read More</a
@@ -519,19 +520,17 @@
               <h4 class="font-weight-bold m-0">Android Development</h4>
             </div>
             <p>
-              Justo sit justo eos amet tempor amet clita amet ipsum eos elitr.
-              Amet lorem lorem lorem est amet labore eirmod erat clita
+              Android app development service comprise design, development, and
+              enhancement of mobile software that runs on all supported Android
+              OS versions.
             </p>
-            <!-- <a class="border-bottom border-primary text-decoration-none" href=""
-              >Read More</a
-            > -->
           </div>
           <!-- <div class="col-lg-4 col-md-6 text-center mb-5">
             <div class="d-flex align-items-center justify-content-center mb-4">
               <i
                 class="fab fa-2x fa-apple service-icon bg-primary text-white mr-3"
               ></i>
-              <h4 class="font-weight-bold m-0">Apps Development</h4>
+              <h4 class="font-weight-bold m-0">DevOps Automation</h4>
             </div>
             <p>
               Justo sit justo eos amet tempor amet clita amet ipsum eos elitr.
@@ -546,28 +545,24 @@
               <h4 class="font-weight-bold m-0">SEO</h4>
             </div>
             <p>
-              Justo sit justo eos amet tempor amet clita amet ipsum eos elitr.
-              Amet lorem lorem lorem est amet labore eirmod erat clita
+              We optimize your websites so that it ranks well on search engines.
+              Making your content search-friendly matters because it's how you
+              get more relevant users viewing your content.
             </p>
-            <!-- <a class="border-bottom border-primary text-decoration-none" href=""
-              >Read More</a
-            > -->
           </div>
-          <!-- <div class="col-lg-4 col-md-6 text-center mb-5">
+          <div class="col-lg-4 col-md-6 text-center mb-5">
             <div class="d-flex align-items-center justify-content-center mb-4">
               <i
                 class="fa fa-2x fa-edit service-icon bg-primary text-white mr-3"
               ></i>
-              <h4 class="font-weight-bold m-0">Content Creating</h4>
+              <h4 class="font-weight-bold m-0">Systems Integration</h4>
             </div>
             <p>
-              Justo sit justo eos amet tempor amet clita amet ipsum eos elitr.
-              Amet lorem lorem lorem est amet labore eirmod erat clita
+              Software integrations open up seamless communication between
+              software applications. Key to better communication, greater
+              efficiency, cost savings, and a seamless customer experience.
             </p>
-            <a class="border-bottom border-primary text-decoration-none" href=""
-              >Read More</a
-            >
-          </div> -->
+          </div>
         </div>
       </div>
     </div>
