--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <img
               class="img-fluid w-100 rounded-circle shadow-sm"
               src="img/"
-              alt=""
+              alt="Nyasha Mangurenje"
             />
           </div>
           <div class="col-lg-7 text-center text-lg-left">
@@ -179,12 +179,12 @@
             <img class="img-fluid rounded w-100" src="img/nyasha.jpg" alt="" />
           </div>
           <div class="col-lg-7">
-            <h3 class="mb-4">Software Developer & Systems Administrator</h3>
+            <h3 class="mb-4">Software Developer</h3>
             <p>
-              Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit
-              amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd
-              sed ea lorem diam ea lorem eirmod duo sit ipsum. Amet dolor stet
-              lorem diam dolor justo et dolor dolor dolor
+              Experienced designing and developing software for business
+              solutions. Software Developer with experience in multiple settings
+              can design and develop programs using the latest and most
+              appropriate technology.
             </p>
             <div class="row mb-3">
               <div class="col-sm-6 py-2">
@@ -267,10 +267,8 @@
                   <small>2019 - 2023</small>
                 </p>
                 <p>
-                  Tempor eos dolore amet tempor dolor tempor. Dolore ea magna
-                  sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem
-                  kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet
-                  lorem diam
+                  Persuing Bachelor's Degree in Information Technology at
+                  Chinhoyi University of Technology from 2019 - 2023.
                 </p>
               </div>
             </div>
@@ -292,10 +290,8 @@
                   | <small>July 2021 - July 2022</small>
                 </p>
                 <p>
-                  Tempor eos dolore amet tempor dolor tempor. Dolore ea magna
-                  sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem
-                  kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet
-                  lorem diam
+                  Conducted work related learning at HITRAC as a Software
+                  Developer for maximum of 1 year.
                 </p>
               </div>
               <div class="position-relative mb-4">
@@ -311,12 +307,7 @@
                   >
                   | <small>July 2021 - July 2022</small>
                 </p>
-                <p>
-                  Tempor eos dolore amet tempor dolor tempor. Dolore ea magna
-                  sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem
-                  kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet
-                  lorem diam
-                </p>
+                <p>Worked as a System Administrator at HITRAC for 1 year.</p>
               </div>
             </div>
           </div>
@@ -492,9 +483,9 @@
               <h4 class="font-weight-bold m-0">Software Development</h4>
             </div>
             <p>
-              Analyzing user needs and designing, constructing, and testing
-              end-user applications that will satisfy these needs through the
-              use of software programming languages.
+              Analyzing user needs and designing, building, and testing end-user
+              applications to meet those needs using software programming
+              languages.
             </p>
           </div>
           <div class="col-lg-4 col-md-6 text-center mb-5">
