--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0">
             <img
               class="img-fluid w-100 rounded-circle shadow-sm"
-              src="img/"
+              src="img/prof.jpg"
               alt="Nyasha Mangurenje"
             />
           </div>
