Add SEO meta tags

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8" />
     <title>Nyasha Mangurenje - portfolio</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="" name="keywords" />
-    <meta content="" name="description" />
+    <meta
+      content="Nyasha, Mangurenje, portfolio, software, app, application, development, developer,
+      website, systems, Administrator, seo, Integration"
+      name="keywords"
+    />
+    <meta
+      content="My name is Nyasha Mangurenje, I'm a Software Developer Experienced designing and developing software for business solutions. Software Developer with experience in multiple settings."
+      name="description"
+    />
 
     <!-- Favicon -->
     <link href="img/favi.jpg" rel="icon" />
