--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="GLt9_U4Xx7LeFtHxH_J6Ct8TxxYr7hLcyJqWPWkp4Hw" />
     <meta charset="utf-8" />
     <title>Nyasha Mangurenje - portfolio</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
